test/asm/label-redefinition.err
error: label-redefinition.asm(7):
    'Sym' already defined at label-redefinition.asm(6) -> label-redefinition.asm::m(4)
Assembly aborted with 1 error!
