test/asm/label-redefinition.asm
SECTION "sec", ROM0
    dw Sym
m: MACRO
Sym::
ENDM
    m
Sym::
